added a system of questionnaires based on interests and parameters; also refactored getChats method